--- a/Photon-Tinker/Base.lproj/Main.storyboard
+++ b/Photon-Tinker/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="N4k-nE-dcU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="N4k-nE-dcU">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -67,7 +67,7 @@
                                 <rect key="frame" x="30" y="244" width="315" height="458"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imgDeviceFamily" translatesAutoresizingMaskIntoConstraints="NO" id="on1-jM-hGs">
-                                        <rect key="frame" x="8" y="37.666666666666686" width="299" height="383"/>
+                                        <rect key="frame" x="8" y="-154" width="299" height="766"/>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -407,22 +407,32 @@
                                                     <rect key="frame" x="15" y="5" width="345" height="50"/>
                                                     <color key="backgroundColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </view>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Device name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x7g-Lb-77J">
-                                                    <rect key="frame" x="25" y="11" width="325" height="38"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Device name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x7g-Lb-77J">
+                                                    <rect key="frame" x="25" y="10.000000000000002" width="325" height="24.666666666666671"/>
                                                     <color key="tintColor" red="0.87843137250000003" green="0.41568627450000001" blue="0.039215686270000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <fontDescription key="fontDescription" name="Gotham-Book" family="Gotham" pointSize="17"/>
                                                     <color key="textColor" red="0.14901960780000001" green="0.14901960780000001" blue="0.14901960780000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Device name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LlZ-rY-6ly">
+                                                    <rect key="frame" x="25" y="37.666666666666664" width="325" height="14.333333333333336"/>
+                                                    <color key="tintColor" red="0.87843137250000003" green="0.41568627450000001" blue="0.039215686270000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <fontDescription key="fontDescription" name="Gotham-Book" family="Gotham" pointSize="14"/>
+                                                    <color key="textColor" white="0.40000000000000002" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
+                                                <constraint firstItem="LlZ-rY-6ly" firstAttribute="top" secondItem="x7g-Lb-77J" secondAttribute="bottom" constant="3" id="4gO-3V-5za"/>
+                                                <constraint firstItem="LlZ-rY-6ly" firstAttribute="bottom" secondItem="xKT-OO-Ki9" secondAttribute="bottom" constant="-3" id="Bb4-Mj-9F1"/>
                                                 <constraint firstItem="xKT-OO-Ki9" firstAttribute="leading" secondItem="QzC-No-ELc" secondAttribute="leading" constant="15" id="CyS-u5-fjr"/>
                                                 <constraint firstAttribute="bottom" secondItem="xKT-OO-Ki9" secondAttribute="bottom" constant="5" id="G2H-zV-dQX"/>
-                                                <constraint firstItem="x7g-Lb-77J" firstAttribute="centerY" secondItem="91Y-hR-d86" secondAttribute="centerY" id="fYj-bY-ETT"/>
+                                                <constraint firstItem="QzC-No-ELc" firstAttribute="trailing" secondItem="LlZ-rY-6ly" secondAttribute="trailing" constant="25" id="VsF-dj-uzt"/>
                                                 <constraint firstItem="x7g-Lb-77J" firstAttribute="leading" secondItem="QzC-No-ELc" secondAttribute="leading" constant="25" id="gQN-mN-J1g"/>
-                                                <constraint firstItem="x7g-Lb-77J" firstAttribute="top" secondItem="91Y-hR-d86" secondAttribute="topMargin" id="lWP-Q2-QEI"/>
+                                                <constraint firstItem="LlZ-rY-6ly" firstAttribute="leading" secondItem="QzC-No-ELc" secondAttribute="leading" constant="25" id="hCU-1E-qS5"/>
                                                 <constraint firstItem="QzC-No-ELc" firstAttribute="trailing" secondItem="x7g-Lb-77J" secondAttribute="trailing" constant="25" id="nLh-QW-CVh"/>
+                                                <constraint firstItem="x7g-Lb-77J" firstAttribute="top" secondItem="xKT-OO-Ki9" secondAttribute="top" constant="5" id="r1o-zJ-fLr"/>
                                                 <constraint firstItem="QzC-No-ELc" firstAttribute="trailing" secondItem="xKT-OO-Ki9" secondAttribute="trailing" constant="15" id="rRa-JT-q25"/>
                                                 <constraint firstItem="xKT-OO-Ki9" firstAttribute="top" secondItem="91Y-hR-d86" secondAttribute="top" constant="5" id="tt3-4q-LcO"/>
                                             </constraints>
@@ -432,6 +442,7 @@
                                         <connections>
                                             <outlet property="deviceCellBackgroundView" destination="xKT-OO-Ki9" id="yp3-TF-ooM"/>
                                             <outlet property="deviceNameLabel" destination="x7g-Lb-77J" id="u0Y-Xh-pvz"/>
+                                            <outlet property="deviceTypeLabel" destination="LlZ-rY-6ly" id="s1a-GG-fvv"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -461,7 +472,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EIC-HQ-CGR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2428" y="-125"/>
+            <point key="canvasLocation" x="2428" y="-125.61576354679804"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="QZP-6e-GKK">
@@ -1599,7 +1610,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0dm-jH-4Zo">
-                                                    <rect key="frame" x="16" y="11" width="149" height="32"/>
+                                                    <rect key="frame" x="16" y="11" width="173" height="32"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="32" id="eVw-tm-1iS"/>
                                                     </constraints>
@@ -1611,7 +1622,7 @@
                                                     </connections>
                                                 </button>
                                                 <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bgr-gq-vsH">
-                                                    <rect key="frame" x="165" y="15" width="28" height="28"/>
+                                                    <rect key="frame" x="189" y="15" width="28" height="28"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="28" id="VI2-e2-NnE"/>
                                                         <constraint firstAttribute="height" constant="28" id="rkg-C1-vYT"/>
@@ -1705,7 +1716,7 @@
                                                     <rect key="frame" x="339" y="17" width="20" height="20"/>
                                                 </activityIndicatorView>
                                                 <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="APd-T7-hO9">
-                                                    <rect key="frame" x="16" y="11" width="151" height="32"/>
+                                                    <rect key="frame" x="16" y="11" width="175" height="32"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="32" id="qnU-7J-ckT"/>
                                                     </constraints>
@@ -1717,7 +1728,7 @@
                                                     </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xCR-Dz-gD2">
-                                                    <rect key="frame" x="167" y="13.666666666666664" width="62" height="27"/>
+                                                    <rect key="frame" x="191" y="13.666666666666664" width="62" height="27"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="28" id="wAG-io-VZ9"/>
                                                     </constraints>
@@ -1734,7 +1745,7 @@
                                                     </connections>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="..." textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5xc-9B-osm">
-                                                    <rect key="frame" x="233" y="17" width="126" height="20"/>
+                                                    <rect key="frame" x="257" y="17" width="102" height="20"/>
                                                     <fontDescription key="fontDescription" name="FiraMono-Regular" family="Fira Mono" pointSize="16"/>
                                                     <color key="textColor" red="0.14901960780000001" green="0.14901960780000001" blue="0.14901960780000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -1943,29 +1954,29 @@
         </scene>
     </scenes>
     <resources>
-        <image name="L" width="32" height="32"/>
-        <image name="alizarin" width="1" height="12"/>
-        <image name="cyan" width="1" height="12"/>
-        <image name="emerald" width="1" height="12"/>
-        <image name="f" width="24" height="24"/>
-        <image name="imgArrowDown" width="64" height="64"/>
-        <image name="imgChevronLeft" width="64" height="64"/>
-        <image name="imgCircle" width="85" height="85"/>
-        <image name="imgCloseIcon" width="170" height="170"/>
-        <image name="imgConsole" width="24" height="24"/>
-        <image name="imgCopyToClipboard" width="400" height="400"/>
-        <image name="imgDeviceFamily" width="424" height="383"/>
-        <image name="imgDeviceUnknown" width="200" height="376"/>
-        <image name="imgPause" width="256" height="256"/>
-        <image name="imgPlus" width="170" height="170"/>
-        <image name="imgRightChevron" width="64" height="64"/>
-        <image name="imgThreeDots" width="600" height="600"/>
-        <image name="imgTinkerLogo" width="87" height="92"/>
-        <image name="imgTrash" width="400" height="400"/>
+        <image name="L" width="64" height="64"/>
+        <image name="alizarin" width="5" height="37"/>
+        <image name="cyan" width="5" height="37"/>
+        <image name="emerald" width="5" height="37"/>
+        <image name="f" width="48" height="48"/>
+        <image name="imgArrowDown" width="128" height="128"/>
+        <image name="imgChevronLeft" width="128" height="128"/>
+        <image name="imgCircle" width="256" height="256"/>
+        <image name="imgCloseIcon" width="512" height="512"/>
+        <image name="imgConsole" width="54" height="54"/>
+        <image name="imgCopyToClipboard" width="1200" height="1200"/>
+        <image name="imgDeviceFamily" width="848" height="766"/>
+        <image name="imgDeviceUnknown" width="400" height="752"/>
+        <image name="imgPause" width="512" height="512"/>
+        <image name="imgPlus" width="512" height="512"/>
+        <image name="imgRightChevron" width="128" height="128"/>
+        <image name="imgThreeDots" width="1200" height="1200"/>
+        <image name="imgTinkerLogo" width="263" height="276"/>
+        <image name="imgTrash" width="1200" height="1200"/>
         <image name="imgTrianglifyHeader" width="970" height="129"/>
-        <image name="particle-vertical-blue" width="200" height="185"/>
-        <image name="sunflower" width="1" height="12"/>
-        <image name="v" width="24" height="24"/>
+        <image name="particle-vertical-blue" width="600" height="555"/>
+        <image name="sunflower" width="5" height="37"/>
+        <image name="v" width="48" height="48"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="Gcf-aV-58w"/>
